tests/src/frontend/syntax/invalid/mistake_val.sk
fun main(): String {
  val myint = 10;
}
